[gd_scene load_steps=4 format=3 uid="uid://c5wqkd5o75xiq"]

[ext_resource type="Script" path="res://main scripts/keybind_tut.gd" id="1_name7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_piaa3"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
expand_margin_left = 9.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fpur"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
expand_margin_left = 7.0

[node name="KeybindTut" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_name7")

[node name="Button_01" type="Button" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 192.0
offset_right = 213.0
offset_bottom = 223.0
text = "LEFT"

[node name="Button_02" type="Button" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 149.0
offset_right = 225.0
offset_bottom = 180.0
text = "RIGHT"

[node name="Label_01" type="Label" parent="."]
layout_mode = 0
offset_left = 263.0
offset_top = 196.0
offset_right = 303.0
offset_bottom = 222.0

[node name="Label_02" type="Label" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 152.0
offset_right = 304.0
offset_bottom = 178.0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 95.0
offset_right = 308.0
offset_bottom = 135.0
theme_override_styles/panel = SubResource("StyleBoxFlat_piaa3")

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3fpur")
text = "Press any key..."
